kubernetes/observability/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-redirect
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: hivy-observability
spec:
  parentRefs:
    - name: public
      namespace: ingress-public
      sectionName: http
  hostnames:
    - monitor.usehivy.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: hivy-observability
spec:
  parentRefs:
    - name: public
      namespace: ingress-public
      sectionName: https
  hostnames:
    - monitor.usehivy.com
  rules:
    - backendRefs:
        - name: obs-grafana
          port: 80
